instructions.Instructions.scala.error
Erreur de compilation :
Instructions:4: error: not found: value doite
doite()
^