instructions.Instructions.scala.code
baisseBrosse()
avance()
avance()
doite()
droite()
recule()
recule()
gauche()
leveBrosse()
avance()